# mecabridge_hardware

./: .gitignore  CMakeLists.txt  README.md  README_drive_arduino.md  install.sh  mecabridge_hardware.xml  package.xml  ros2-env-setup.sh  test_feature_builds.sh  test_mecabridge_comms_docker.sh  test_mecabridge_integration_docker.sh
config/: README.md  fake_robot_hardware.xml  mecabridge_differential_controller.yaml  mecabridge_differential_enhanced.yaml  mecabridge_example_configs.yaml  mecabridge_four_wheel_controller.yaml  mecabridge_hardware.xml  mecabridge_hardware_params.yaml  mecabridge_mecanum_controller.yaml  mecabridge_mecanum_enhanced.yaml  robot_controller_example.yaml  robot_hardware.xml
firmware/mecabridge_pico/: .gitignore  CMakeLists.txt  build.sh
firmware/mecabridge_pico/src/: actuators.cpp  actuators.hpp  enc.cpp  enc.h  esc_servo.cpp  esc_servo.h  frame_parser.cpp  frame_parser.hpp  main.cpp  motors.cpp  motors.h  term.cpp  term.h
include/mecabridge_hardware/: feature_config.hpp  mecabridge_drive_config.h  mecabridge_hardware.hpp  mecabridge_hardware_interface.h  mecabridge_serial_protocol.h  wheel.h
include/mecabridge_hardware/mecabridge_utils/protocol/: crc16.hpp  frame.hpp
include/mecabridge_hardware/mecabridge_utils/safety/: watchdog.hpp
include/mecabridge_utils/: config.hpp  serial.hpp
include/mecabridge_utils/protocol/: scaling.hpp
include/mecabridge_utils/serial/: loopback_serial_backend.hpp
launch/: fake_robot.launch.py  mecabridge_differential.launch.py  mecabridge_differential_enhanced.launch.py  mecabridge_four_wheel.launch.py  mecabridge_hardware.launch.py  mecabridge_mecanum.launch.py  test_robot.launch.py
scripts/: build.sh  dev.sh  fix_headers.py  insert_license_headers.py
specs/001-mecabridge-plan/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-mecabridge-plan/contracts/: frame_protocol.md  watchdog.md  yaml_config.md
src/mecabridge_hardware/: mecabridge_hardware.cpp  mecabridge_hardware_interface.cpp  mecabridge_hardware_interface_temp.cpp  mecabridge_serial_protocol.cpp  wheel.cpp
src/mecabridge_utils/config/: config.cpp  config.hpp
src/mecabridge_utils/latency/: latency_tracker.cpp  latency_tracker.hpp
src/mecabridge_utils/protocol/: crc16.cpp  crc16.hpp  frame.cpp  frame.hpp
src/mecabridge_utils/safety/: watchdog.cpp  watchdog.hpp
src/mecabridge_utils/serial/: loopback_serial_backend.cpp  loopback_serial_backend.hpp  mock_serial_backend.hpp  serial_backend.hpp
test/config/: test_controllers.yaml  test_mecabridge_hardware.yaml
test/integration/: integration_test_node.cpp
test/launch/: test_controller_integration.launch.py
test/mecabridge/: mock_serial.hpp  test_mecabridge_hardware_interface.cpp  test_mecabridge_integration.cpp  test_mecabridge_serial_protocol.cpp  test_mecabridge_serial_protocol_comprehensive.cpp  test_mecabridge_serial_protocol_simple.cpp  test_mecabridge_serial_protocol_unit.cpp  testable_mecabridge_serial_protocol.cpp  testable_mecabridge_serial_protocol.h
test/mecabridge/config/: test_config.cpp  test_feature_toggles.cpp
test/mecabridge/hardware/: test_mecabridge_hardware_interface.cpp  test_mecabridge_hardware_interface.yaml
test/mecabridge/integration/: test_esc_servo_limits.cpp  test_latency_measurement.cpp  test_serial_loopback.cpp  test_watchdog_end_to_end.cpp
test/mecabridge/latency/: test_latency_tracker.cpp
test/mecabridge/protocol/: test_crc16.cpp  test_frame_errors.cpp  test_frame_roundtrip.cpp  test_protocol_empty.cpp  test_protocol_handshake.cpp  test_scaling.cpp
test/mecabridge/safety/: test_watchdog.cpp
test/urdf/: test_robot.urdf
test_legacy/: README.md  example_usage.py  mock_serial.h  run_hardware_interface_tests.sh  run_integration_tests.sh  run_tests.sh  test_launch_functionality.py  test_mecabridge_hardware_interface.cpp  test_mecabridge_integration.cpp  test_mecabridge_serial_protocol.cpp  test_mecabridge_serial_protocol_comprehensive.cpp  test_mecabridge_serial_protocol_simple.cpp  test_mecabridge_serial_protocol_unit.cpp  testable_mecabridge_serial_protocol.cpp  testable_mecabridge_serial_protocol.h
